# netdog

./: .gitignore  LICENSE  README.md  netdog.py  pyproject.toml
sample/: httpget.py  textinp.py  textout.py
src/netdog/: __init__.py  cli.py  netdog.py  netdogif.py
tests/: dmy.py
tests/stub_proc/: clout.py  echo_back.py  lb_cr.py  lb_crlf.py  lb_lf.py
